Version 0.3.2
=============

17.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Proper HTML codes instead of '<' and '>' chars

14.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Temporarily disabled code for the 3rd party feedback widget
  * Fixed the wrong link on tag view screen


Version 0.3.1
=============

05.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Code for 3rd party feedback widget

04.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Relabeled some tag related strings, improved CSS, fixed some bugs
  * Basic administration module for featured topic/tag
  * Cosmetic corrections
  * Link to blog added

03.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Introducing descriptions and keywords for better SEO
  * Simple pagination for the sidebar trending topic  

18.06.2010
==========
  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Implemented tags list and tag show pages
  * Customized endless page pagination to be used for categories and tags
  * Fixed bug with last registered used for category
  * Fixed design issue with pagination div
  * Renamed trends to trending_tags

13.06.2010
==========
  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Updated test environment, improved README and initial setup for it
  * Removed tests dir (spec (RSpec) and features (Cucumber) are used instead
  * Added factory_girl factories for models
  * Added associations and validations specs for models
  * Added Tag and Tagging models for Trending topics (#hashtag) feature
  * Implemented trending topics feature

11.06.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Added member counter
  * Bugfixes:
    - Fixed the typo in the user category settings

06.06.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Refactoring: renamed lists to categories
  * Updated jquery and jquery versions to 1.4.2 and 1.8.2 respectively
  * Renamed README to README.rdoc to use markdown