@@ -5,7 +5,6 @@
 
 - content_for(:sidebar) do
   = render :partial => 'shared/user_status'
-  = render :partial => 'shared/member_counter'
   = render :partial => 'shared/trending_tags' 
 
   #hashtag_filter
