@@ -21,6 +21,8 @@
 
       .navigation
         = render_navigation
+        = render :partial => 'shared/member_counter'
+          
 
     .clear
 
