@@ -2,7 +2,6 @@
 
 - content_for(:sidebar) do
   = render :partial => 'shared/user_status'
-  = render :partial => 'shared/member_counter'
 
 %script
   = "var _subscriptions_per_user = #{G140[:subscriptions_per_user]};"
