@@ -1,4 +1,3 @@
-.sidebox
-  - link_to users_path do
-    .counter= User.all.size
-    .label= t('global.members')
+- link_to users_path do
+  .counter= User.all.size
+  // .label= t('global.members')
