@@ -3,7 +3,6 @@
 
 - content_for(:sidebar) do
   = render :partial => 'shared/user_status'
-  = render :partial => 'shared/member_counter'
   = render :partial => 'shared/trending_tags'
   //= render :partial => 'shared/hashtag_filter'
 
